<resources>
    <string name="app_name">ExerCare</string>
    <string name="Urheilu">Urheilu</string>
    <string name="Ruutuaika">Ruutuaika</string>
    <string name="Paino">Paino</string>
    <string name="Uswitch">Urheilemassa</string>
    <string name="Rswitch">Ruudulla</string>
    <string name="PpButton">Päivän paino</string>
    <string name="Historia">Historia</string>
    <string name="goals"><u>Tavoitteet</u></string>
    <string name="weight_goal">Painotavoite:</string>
    <string name="sport_goal">Urheilutavoite:</string>
    <string name="screen_goal">Ruututavoite:</string>
    <string name="change">vaihda</string>
    <string name="values_text"><u>Tämän päivän arvot</u></string>
    <string name="weight">Paino:</string>
    <string name="sport_time">Urheiluaika:</string>
    <string name="screen_time">Ruutuaika:</string>
    <string name="welcome_text">Tervetuloa! <br />Täytä tietosi alla oleviin kenttiin.</string>
    <string name="name">Nimi:</string>
    <string name="new_user_name">Nimi</string>
    <string name="new_user_weight">Paino</string>
    <string name="new_user_sport_goal">Urheilutavoite (minuuttia)</string>
    <string name="new_user_screen_time_goal">Ruutuaikatavoite (minuuttia)</string>
    <string name="new_user_submit">OK, lets mennään!</string>
    <string name="new_user_missing_values">Syötä puuttuvat arvot!</string>
    <string name="Enter_start_date">Aloituspäivämäärä pv/kk/v</string>
    <string name="Enter_end_date">Lopetuspäivämäärä pv/kk/v</string>
    <string name="empty"></string>
    <string name="new_user_birthday">Syntymäpäivä</string>
    <string name="new_user_weight_goal">Painotavoitteesi</string>
    <string name="submit">Syötä</string>
    <string name="cancel">Peruuta</string>
    <string name="settings">Asetukset</string>
    <string name="temp_empty">Tyhjä</string>
    <string name="debug">Debug</string>
    <string name="day_value">Päivä:</string>
    <string name="more">Lisää</string>
</resources>