<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="286dp"
        android:layout_height="98dp"
        android:text="@string/welcome_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <EditText
        android:id="@+id/new_user_name"
        android:digits="0123456789qwertzuiopåasdfghjklöäyxcvbnmQWERTYUIOPÅASDFGHJKLÖÄZXCVBNM "
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:hint="@string/new_user_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.100000024" />


    <EditText
        android:id="@+id/new_user_weight"
        android:digits="0123456789."
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:hint="@string/new_user_weight"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/new_user_sport_goal"
        android:digits="0123456789"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:hint="@string/new_user_sport_goal"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.29000002" />

    <EditText
        android:id="@+id/new_user_screen_time_goal"
        android:digits="0123456789"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:hint="@string/new_user_screen_time_goal"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.39" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitNewUserInfo"
        android:text="@string/new_user_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_user_screen_time_goal"
        app:layout_constraintVertical_bias="0.23000002" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="302dp"
        android:layout_height="53dp"
        android:textSize="18sp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.29000002" />

</androidx.constraintlayout.widget.ConstraintLayout>