<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HistoryActivity">

    <RelativeLayout
        android:id="@+id/GraphLayout"
        android:layout_width="match_parent"
        android:layout_height="533dp"
        android:layout_weight=".3"
        android:background="@drawable/border">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/Graph"
            android:layout_width="match_parent"
            android:layout_height="500dp" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/LowerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".7"
        android:background="@drawable/border">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="286dp"
            android:layout_marginRight="286dp"
            android:layout_marginBottom="275dp"
            android:text="@string/PpButton" />

        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginBottom="135dp"
            android:text="@string/Enter_start_date" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="82dp"
            android:text="@string/Enter_end_date" />


    </RelativeLayout>


</LinearLayout>